--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,22 +1,20 @@
 # main links links
 main:
-  - title: "Publications"
-    url: /publications/
-
-  - title: "Talks"
-    url: /talks/    
-
-  - title: "Teaching"
-    url: /teaching/    
-    
-  - title: "Portfolio"
-    url: /portfolio/
-        
-  - title: "Blog Posts"
-    url: /year-archive/
-    
   - title: "CV"
     url: /cv/
+
+  - title: "Classes"
+    url: /classes/    
+
+  - title: "Learning"
+    url: /learning/    
     
-  - title: "Guide"
-    url: /markdown/
+  - title: "University Life"
+    url: /uni/
+        
+  - title: "Writings"
+    url: /writings/
+    
+  - title: "Miscellaneous"
+    url: /miscc/
+  
