added topo blog
h

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -11,7 +11,10 @@ main:
     
   - title: "University Life"
     url: /uni/
+
+  - title: "Algebraic Topology Blog"
+    url: /topo/
     
   - title: "Miscellaneous"
     url: /miscc/
-  
+
