--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,7 +5,9 @@ main:
 
   - title: "Classes"
     url: /classes/    
-    
+
+  - title: "This Week's Finds"
+    url: /math/
   - title: "University Life"
     url: /uni/
     
