--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,7 +6,7 @@ main:
   - title: "Classes"
     url: /classes/    
 
-  - title: "This Week's Finds"
+  - title: "This Week's Find"
     url: /math/
  # - title: "University Life"
   #  url: /uni/
