--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,10 +6,10 @@ main:
   - title: "Classes"
     url: /classes/    
 
-  - title: "This Week's Find"
-    url: /math/
- # - title: "University Life"
-  #  url: /uni/
+#  - title: "This Week's Find"
+#    url: /math/
+  - title: "University Life"
+   url: /uni/
     
   - title: "Miscellaneous"
     url: /miscc/
