--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Bockman Cheung"
-  avatar           : "profile.png"
+  avatar           : "bio-photo.jpg"
   bio              : "Math Undergraduate, '27"
   location         : "UCLA"
   employer         :
